working image shifts, before attempting to fix gradient in chrome

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,40 +68,41 @@ header .hero {
   animation: gradientRotate 4s infinite forwards alternate;
   background-image: var(--accent-gradient);
   background-clip: text;
+  -webkit-background-clip: text;
 }
 header .hero__name {
   font-family: "League Spartan", Helvetica, sans-serif;
   font-weight: 900;
   font-size: 11rem;
 }
-header .hero__name span :not(.word) {
+header .hero__name--word span {
   display: inline-block;
-  animation: popUp 1s both;
-  animation-delay: calc(0.05s * var(--i));
+  animation: popUp 0.75s both;
+  animation-delay: calc(0.08s * var(--i));
 }
 header .hero__title {
   font-size: 2.4rem;
   text-align: right;
   line-height: 3.5rem;
-  animation: popUp 1s both;
-  animation-delay: calc(0.05s * var(--i));
+  animation: popUp 0.75s both;
+  animation-delay: calc(0.08s * var(--i));
 }
 
 .projects {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 4rem;
+  display: flex;
+  justify-content: space-evenly;
   margin: 8rem 0;
+  flex-wrap: wrap;
 }
 .projects .project {
   max-width: 50rem;
-  justify-self: center;
+  transition: height 2s ease-out;
 }
 .projects .project__image {
   object-fit: contain;
   width: 100%;
   border-radius: 8px;
-  transition: all 0.4s ease-out;
+  transition: transform 0.4s ease-out;
   box-shadow: 0.1rem 0.1rem 1rem lightgrey;
   position: relative;
   z-index: 1;
@@ -118,8 +119,40 @@ header .hero__title {
   transform: scale(1.02) translate(calc(var(--mouse-x) * -0.5rem), calc(-1.5rem + var(--mouse-y) * -0.5rem)) perspective(150px) rotateX(calc(var(--mouse-y) * -1deg)) rotateY(calc(var(--mouse-x) * 1deg));
   box-shadow: 0.1rem 0.1rem 2rem lightgrey;
 }
-.projects .project__full-info {
+.projects .project__full-info, .projects .project__close {
   display: none;
+}
+.projects .project.selected {
+  max-width: 100%;
+  height: 80vh;
+  order: -1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.projects .project.selected .project__image {
+  width: 50%;
+  margin: 0 auto;
+}
+.projects .project.selected .project__full-info {
+  display: block;
+}
+.projects .project.selected:hover .project__image {
+  transform: none;
+  box-shadow: 0.1rem 0.1rem 1rem lightgrey;
+}
+.projects .project.selected .project__close {
+  display: block;
+  color: lightgrey;
+  font-size: 6rem;
+  position: absolute;
+  top: -4rem;
+  right: 8rem;
+  transition: all 0.5s;
+}
+.projects .project.selected .project__close:hover {
+  color: grey;
+  cursor: pointer;
 }
 
 footer {
